Refactor to Hexagonal

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 
 *.jar
 *.jar
+cammelservice/src/main/java/.DS_Store
+cammelservice/src/.DS_Store
+cammelservice/.DS_Store
+cammelproject/src/.DS_Store
+cammelproject/src/main/.DS_Store
+cammelservice/src/main/.DS_Store
+cammelservice/src/main/java/com/.DS_Store
+cammelproject/.DS_Store
+.DS_Store
+.DS_Store
+cammelproject/.DS_Store
